dashboard/kubernetes-dashboard/kubernetes-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - web
  - websecure
  routes:
#  - match: "Host(`kubernetes-dashboard.${clusterdomain:=undefined}`)"
  - match: "Host(`kubernetes-dashboard.tpi.stiil.dk`)"
    kind: Rule
    services:
    - kind: Service
      name: dashboard-kubernetes-dashboard-kong-proxy
      scheme: https
      port: 443
      serversTransport: kubernetes-dashboard
  tls: {}
